# golance-challenge

./: README.md  explore_data.ipynb  generate_data.py  pyproject.toml
