[project]
name = "golance-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.2.0",
    "duckdb-engine>=0.15.0",
    "faker>=36.1.0",
    "jupysql>=0.10.17",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
]
